Melhorias do teste unitario classe ClienteServiceTest